Add local project to the image